--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Drag and Drop Website Builder</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Drag & Drop Builder</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
